--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,6 +12,23 @@
   {% assign title = post.title %}
 {% endif %}
 
+<article class="award">
+  <h2>
+    <a href="{{ base_path }}{{ award.url }}" rel="permalink">{{ award.title }}</a>
+  </h2>
+  <!-- <p>Published on: {{ award.date | date: "%B %d, %Y" }}</p> -->
+  <p>{{ award.date | date: "%B %d, %Y"  }}</p>
+  <p>{{ award.excerpt | markdownify }}</p>
+</article>
+
+<article class="references">
+  <h2>
+    <a href="{{ base_path }}{{ references.url }}" rel="permalink">{{ references.title }}</a>
+  </h2>
+  <!-- <p>Published on: {{ award.date | date: "%B %d, %Y" }}</p> -->
+  <p>{{ references.excerpt | markdownify }}</p>
+</article>
+
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
@@ -41,7 +58,7 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <!-- <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p> -->
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
